src/objects/StudentHandbook__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>StudentHandbookPkbView</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Articles contained within the student handbook</description>
    <fields>
        <fullName>Attachment2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment4__c</fullName>
        <label>Attachment 4</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>Body of the Article</description>
        <inlineHelpText>Body of the Article</inlineHelpText>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Student_Handbook_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InitialArticleApprover__c</fullName>
        <description>User who approved the article in step 1 of the approval process</description>
        <label>Initial Article Approver</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLDId__c</fullName>
        <description>Previous Article number from migration</description>
        <inlineHelpText>Previous Article number from migration</inlineHelpText>
        <label>OLD_Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Student Handbook</label>
    <pluralLabel>Student Handbook</pluralLabel>
</CustomObject>